--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/SolidarityEconomyAssociation/open-data-and-maps.git"
+    "url": "git+ssh://git@github.com:SolidarityEconomyAssociation/sea-map.git"
   },
   "keywords": [
     "mapping",
@@ -29,9 +29,9 @@
   "author": "Solidarity Economy Association",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/SolidarityEconomyAssociation/open-data-and-maps/issues"
+    "url": "https://github.com/SolidarityEconomyAssociation/sea-map/issues"
   },
-  "homepage": "https://github.com/SolidarityEconomyAssociation/open-data-and-maps#readme",
+  "homepage": "https://github.com/SolidarityEconomyAssociation/sea-map#readme",
   "dependencies": {
     "requirejs": "^2.3.6"
   },
