--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "requirejs": "^2.3.6"
   },
   "devDependencies": {
-    "eslint": "^6.7.2"
+    "eslint": "^6.7.2",
+    "mocha": "^8.0.1"
   }
 }
