--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ insert_final_newline = true
 charset = utf-8
 
 # 4 space indentation
-[*.{js,json}]
+[*.{js,json,css}]
 indent_style = space
 indent_size = 2
 
