package.json - add deploy-dev runscript

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.65",
   "description": "A web application for mapping initiatives in the Solidarity Economy",
   "main": "www/map-app/app.js",
-  "config": {},
+  "config": {
+    "deploy_to": "",
+    "deploy_user": "www-data",
+    "deploy_group": "www-data"
+  },
   "engines": {
     "npm": ">=6.5.0"
   },
@@ -18,7 +22,8 @@
     "build": "PATH=$PATH:$PWD/bin; sea-site-build -c ext/config -m ./ -d ext/build ext/src/*",
     "build-windows": "./bin/sea-site-build-windows -c ext/config -m ./ -d ext/build ext/src/*",
     "serve": "php -t ext/build/out -S localhost:8080",
-    "serve-public": "php -t ext/build/out -S 0.0.0.0:8080"
+    "serve-public": "php -t ext/build/out -S 0.0.0.0:8080",
+    "dev-deploy": "set -x; rsync -avzc --delete --rsync-path='sudo rsync' --usermap=\"*:$npm_package_config_deploy_user\" --groupmap=\"*:$npm_package_config_deploy_group\" --exclude=build.txt --exclude=.* ext/build/out/ \"${npm_package_config_deploy_to:?Please define the '$npm_package_name:deploy_to' npm config parameter}\""
   },
   "repository": {
     "type": "git",
