bin/sea-site-deploy - add this deploy script
It encapsulates the rather lengthy rsync command which was inline in
the package.jon runscript.

It can be used both in sea-map, and in consuming map applications.

Additionally, I've implemented command-line options which can override
the configured values. This is for scripting, specifically the `seodo`
script (defined outside this repository currently).

See documentation inlined in the script.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "bin": {
     "generate-version": "bin/generate-version",
-    "sea-site-build": "bin/sea-site-build"
+    "sea-site-build": "bin/sea-site-build",
+    "sea-site-deploy": "bin/sea-site-deploy"
   },
   "scripts": {
     "lint": "eslint www/map-app/**/*.js",
@@ -23,7 +24,7 @@
     "build-windows": "./bin/sea-site-build-windows -c ext/config -m ./ -d ext/build ext/src/*",
     "serve": "php -t ext/build/out -S localhost:8080",
     "serve-public": "php -t ext/build/out -S 0.0.0.0:8080",
-    "dev-deploy": "set -x; rsync -avzc --delete --rsync-path='sudo rsync' --usermap=\"*:$npm_package_config_deploy_user\" --groupmap=\"*:$npm_package_config_deploy_group\" --exclude=build.txt --exclude=.* ext/build/out/ \"${npm_package_config_deploy_to:?Please define the '$npm_package_name:deploy_to' npm config parameter}\""
+    "dev-deploy": "bin/sea-map-deploy"
   },
   "repository": {
     "type": "git",
