--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "generate-config-doc": "bin/generate-config-doc >CONFIG.md",
     "build": "PATH=$PATH:$PWD/bin; sea-site-build -c ext/config -m ./ -d ext/build ext/src/*",
     "build-windows": "./bin/sea-site-build-windows -c ext/config -m ./ -d ext/build ext/src/*",
-    "serve": "php -t ext/build/out -S localhost:8080",
-    "serve-public": "php -t ext/build/out -S 0.0.0.0:8080",
-    "dev-deploy": "bin/sea-map-deploy"
+    "server": "php -t ext/build/out -S localhost:8080",
+    "public-server": "php -t ext/build/out -S 0.0.0.0:8080",
+    "dev-deploy": "bin/sea-site-deploy -f ext/build/out/"
   },
   "repository": {
     "type": "git",
