--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   "homepage": "https://github.com/SolidarityEconomyAssociation/sea-map#readme",
   "dependencies": {
     "d3": "^5.7.0",
-    "font-awesome": "^4.7.0",
     "leaflet": "^1.5.1",
     "leaflet-active-area": "^1.1.0",
     "leaflet-contextmenu": "^1.4.0",
@@ -56,6 +55,7 @@
     "postal": "^2.0.5"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^6.7.2",
