--- a/package.json
+++ b/package.json
@@ -51,15 +51,16 @@
     "css-loader": "^5.0.1",
     "d3": "^5.7.0",
     "file-loader": "^6.2.0",
-    "minimist": "^1.2.5",
     "leaflet": "^1.5.1",
     "leaflet-active-area": "^1.1.0",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet.awesome-markers": "^2.0.5",
     "leaflet.markercluster": "^1.4.1",
+    "mini-css-extract-plugin": "^1.3.5",
+    "minimist": "^1.2.5",
+    "postal": "^2.0.5",
     "style-loader": "^2.0.0",
-    "webpack": "^5.18.0",
-    "postal": "^2.0.5"
+    "webpack": "^5.18.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
