style.css view/map/marker.js change width to 50vw

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "mocha",
     "generate-config-doc": "bin/generate-config-doc >CONFIG.md",
     "build": "bin/sea-site-build -c ext/config -m ./ -d ext/build ext/src/*",
-    "build-windows": "./bin/sea-site-build-windows -c ext/config -m ./ -d ext/build ext/src/*",
+    "build-windows": "node bin/sea-site-build -c ext/config -m ./ -d ext/build ext/src/",
     "server": "php -t ext/build/out -S localhost:8080",
     "webpack": "webpack",
     "server2": "php -t dist -S localhost:8080",
