.editorconfig - define .md files to indent with 4 spaces

--- a/.editorconfig
+++ b/.editorconfig
@@ -16,7 +16,7 @@ indent_size = 2
 charset = utf-8
 
 # 4 space indentation
-[*.{php}]
+[*.{php,md}]
 indent_style = space
 indent_size = 4
 charset = utf-8
