--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "devDependencies": {
     "eslint": "^6.7.2",
+    "instant-mocha": "^1.3.1",
     "mocha": "^8.4.0",
     "webpack-cli": "^4.7.0"
   }
