--- a/package.json
+++ b/package.json
@@ -63,8 +63,17 @@
     "webpack": "^5.37.0"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
     "eslint": "^6.7.2",
     "instant-mocha": "^1.3.1",
+    "karma": "^6.3.4",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.1",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-mocha": "^2.0.1",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-webpack": "^5.0.0",
     "mocha": "^8.4.0",
     "webpack-cli": "^4.7.0"
   }
