package.json, karma.conf.js etc. - add karma tests run-script
Karma runs tests in the browser, which some of our tests will need
when they are testing code which expects that environment, which means
we can't run them directly in NodeJS.

This is unfortunately slower, and there can be various browsers to
test on.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "scripts": {
     "lint": "eslint www/map-app/**/*.js",
-    "tests": "instant-mocha --webpack-config mocha-webpack.config.js --full-trace test/mocha-all.js", 
+    "browser-tests": "karma start --single-run --browsers FirefoxHeadless",
+    "tests": "instant-mocha --webpack-config mocha-webpack.config.js --full-trace test/mocha-all.js",
     "generate-config-doc": "bin/generate-config-doc >CONFIG.md",
     "build": "bin/sea-site-build -c ext/config -m ./ -d ext/build ext/src/*",
     "build-windows": "node bin/sea-site-build -c ext/config -m ./ -d ext/build ext/src/",
