--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
     "mocha": "^9.2.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
     "webpack-cli": "^4.8.0"
   }
 }
