--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ end_of_line = lf
 insert_final_newline = true
 
 # 2 space indentation
-[*.{js,json,css}]
+[*.{js,ts,json,css}]
 indent_style = space
 indent_size = 2
 charset = utf-8
