--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "lint": "eslint www/map-app/**/*.js",
     "browser-tests": "karma start --single-run --browsers FirefoxHeadless",
-    "tests": "instant-mocha --webpack-config mocha-webpack.config.js --full-trace test/mocha-all.js",
+    "mocha-tests": "instant-mocha --webpack-config mocha-webpack.config.js --full-trace test/mocha-all.js",
+    "test": "npm run mocha-tests && npm run browser-tests",
     "generate-config-doc": "bin/generate-config-doc >CONFIG.md",
     "build": "bin/sea-site-build -c ext/config -m ./ -d ext/build ext/src/*",
     "build-windows": "node bin/sea-site-build -c ext/config -m ./ -d ext/build ext/src/",
