--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "minimist": "^1.2.6",
     "postal": "^2.0.6",
     "style-loader": "^2.0.0",
+    "ts-node": "^10.7.0",
     "webpack": "^5.53.0"
   },
   "devDependencies": {
