www/map-app/app/main.ts -> www/map-app/index.ts, app.ts -> default_app.ts
This is slightly less odd, and allows us to include "sea-map/index"
rather than "sea-map/map-app/main".

app.ts also renamed to reflect its new purpose as a default
application file, default_app.ts.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sea-map",
   "version": "1.3.5",
   "description": "A web application for mapping initiatives in the Solidarity Economy",
-  "main": "www/map-app/app/main.js",
+  "main": "www/map-app/index.ts",
   "config": {
     "deploy_to": "",
     "deploy_user": "www-data",
