--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "css-loader": "^5.2.7",
     "d3": "^5.7.0",
     "file-loader": "^6.2.0",
+    "html-loader": "^3.1.0",
     "leaflet": "^1.5.1",
     "leaflet-active-area": "^1.1.0",
     "leaflet-contextmenu": "^1.4.0",
