--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "webpack": "^5.53.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.1.0",
     "chai": "^4.3.4",
     "eslint": "^8.8.0",
     "instant-mocha": "^1.3.1",
