--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.1.0",
+    "@types/postal": "^1.0.31",
     "chai": "^4.3.4",
     "eslint": "^8.8.0",
     "instant-mocha": "^1.3.1",
