--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/chai": "^4.3.3",
+    "@types/cssesc": "^3.0.0",
     "@types/d3": "^7.1.0",
     "@types/mocha": "^9.1.1",
     "@types/papaparse": "^5.3.5",
     "@types/postal": "^1.0.31",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.7",
+    "cssesc": "^3.0.0",
     "d3": "^7.6.1",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
