--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.7",
+    "cssesc": "^3.0.0",
     "d3": "^5.7.0",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
