--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/chai": "^4.3.3",
     "@types/cssesc": "^3.0.0",
     "@types/d3": "^7.1.0",
+    "@types/leaflet": "^1.7.9",
     "@types/mocha": "^9.1.1",
     "@types/papaparse": "^5.3.5",
     "@types/postal": "^1.0.31",
