--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@types/cssesc": "^3.0.0",
     "@types/d3": "^7.1.0",
     "@types/leaflet": "^1.7.9",
+    "@types/leaflet.awesome-markers": "^2.0.25",
+    "@types/leaflet.markercluster": "^1.4.6",
     "@types/mocha": "^9.1.1",
     "@types/papaparse": "^5.3.5",
     "@types/postal": "^1.0.31",
