--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/leaflet": "^1.7.9",
+    "@types/leaflet.awesome-markers": "^2.0.25",
+    "@types/leaflet.markercluster": "^1.4.6",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.7",
     "cssesc": "^3.0.0",
