--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "noImplicitAny": true,
     "sourceMap": true,
     "target": "es5",
+    "lib": ["DOM", "ES2021"],
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node"
