--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   "homepage": "https://github.com/SolidarityEconomyAssociation/sea-map#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.7",
     "d3": "^5.7.0",
