--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.1.0",
+    "@types/nock": "^11.1.0",
     "@types/postal": "^1.0.31",
     "chai": "^4.3.4",
     "eslint": "^8.8.0",
@@ -87,6 +88,7 @@
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
     "mocha": "^9.2.0",
+    "nock": "^13.2.9",
     "webpack-cli": "^4.8.0"
   }
 }
