--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/nock": "^11.1.0",
     "@types/postal": "^1.0.31",
     "chai": "^4.3.4",
+    "cross-fetch": "^3.1.5",
     "eslint": "^8.8.0",
     "instant-mocha": "^1.3.1",
     "karma": "^6.3.16",
