--- a/package.json
+++ b/package.json
@@ -73,10 +73,12 @@
     "webpack": "^5.53.0"
   },
   "devDependencies": {
+    "@types/chai-as-promised": "^7.1.5",
     "@types/d3": "^7.1.0",
     "@types/nock": "^11.1.0",
     "@types/postal": "^1.0.31",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "cross-fetch": "^3.1.5",
     "eslint": "^8.8.0",
     "instant-mocha": "^1.3.1",
