--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/chai": "^4.3.3",
     "@types/mocha": "^9.1.1",
+    "@types/papaparse": "^5.3.5",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.7",
     "d3": "^5.7.0",
@@ -65,6 +66,7 @@
     "leaflet.markercluster": "^1.5.1",
     "mini-css-extract-plugin": "^1.6.2",
     "minimist": "^1.2.6",
+    "papaparse": "^5.3.2",
     "postal": "^2.0.6",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.6",
