--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
     "nock": "^13.2.9",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "xhr2-cookies": "^1.1.0"
   }
 }
