* - rename sea-map -> mykomap
Everywhere, except in rare cases (where a reference to the previous
incarnation is intended).

And:
- update links to the SolidarityEconomyAssociation github account to DigitalCommons
- update links to SolidarityEconomyAssociation/playground to DigitalCommons/mykomap-site-example
- rename certain variables from seaMap* -> mykoMap ->

THIS IS A BREAKING CHANGE REQUIRING A MAJOR VERSION BUMP. This will
come in an upcoming commit.

Projects downstream will mainly need to rename references to `sea-map`
prefixed includes to the `mykomap` prefixed equivalents, and set the
correct version.  Script names have changed also (so `sea-site-build`
-> `mykomap-site-build`)

Note, so far I have no renamed all the sea-* class names.

CONFIG.md will be regenerated rather than manually renamed. This will
come in an upcoming commit.

Tests still pass, and `npm run server` still works.

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 node_modules/
 
 # Optional link to an external map project for development purposes
-# (e.g. playground)
+# (e.g. mykomap-site-example)
 /ext
 
 # Configuration for local testing
