* - move www/ to src/
This is quite a big change, but fixes a historical strange choice of
putting source code in www/ rather than src/

Now that sea-map is being renamed as mykomap, it seems a good time to
do it, as many other breaking changes are being implemented.

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ node_modules/
 /ext
 
 # Configuration for local testing
-/www/configuration
-/www/services/locCache.json
-/www/services/latest_timestamp.txt
+/src/configuration
+/src/services/locCache.json
+/src/services/latest_timestamp.txt
 /dist/
