--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/chai": "^4.3.3",
     "@types/d3": "^7.1.0",
+    "@types/leaflet": "^1.9.0",
+    "@types/leaflet.markercluster": "^1.5.1",
     "@types/mocha": "^9.1.1",
     "@types/papaparse": "^5.3.5",
     "@types/postal": "^1.0.31",
