--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   },
   "devDependencies": {
     "@types/chai-as-promised": "^7.1.5",
+    "@types/leaflet.awesome-markers": "^2.0.25",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "cross-fetch": "^3.1.5",
