--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "papaparse": "^5.3.2",
     "postal": "^2.0.6",
     "style-loader": "^2.0.0",
+    "supercluster": "^8.0.1",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.7.0",
     "typescript": "^4.5.5",
