--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/mocha": "^9.1.1",
     "@types/papaparse": "^5.3.5",
     "@types/postal": "^1.0.31",
+    "@types/supercluster": "^7.1.3",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.7",
     "d3": "^7.6.1",
