--- a/package.json
+++ b/package.json
@@ -52,9 +52,6 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/chai": "^4.3.3",
     "@types/d3": "^7.4.0",
-    "@types/leaflet": "^1.9.0",
-    "@types/leaflet.awesome-markers": "^2.0.25",
-    "@types/leaflet.markercluster": "^1.5.1",
     "@types/mocha": "^9.1.1",
     "@types/papaparse": "^5.3.5",
     "@types/postal": "^1.0.31",
@@ -63,11 +60,7 @@
     "d3": "^7.6.1",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
-    "leaflet": "^1.5.1",
-    "leaflet-active-area": "^1.1.0",
-    "leaflet-contextmenu": "^1.4.0",
-    "leaflet.awesome-markers": "^2.0.5",
-    "leaflet.markercluster": "^1.5.1",
+    "mapbox-gl": "^3.5.1",
     "mini-css-extract-plugin": "^1.6.2",
     "minimist": "^1.2.6",
     "mocha": "^10.1.0",
