--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "d3": "^7.6.1",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
-    "mapbox-gl": "^3.5.1",
+    "maplibre-gl": "^4.5.0",
     "mini-css-extract-plugin": "^1.6.2",
     "minimist": "^1.2.6",
     "mocha": "^10.1.0",
@@ -69,7 +69,7 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.7.0",
-    "typescript": "^4.5.5",
+    "typescript": "^5.5.4",
     "webpack": "^5.53.0"
   },
   "devDependencies": {
@@ -77,6 +77,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "cross-fetch": "^3.1.5",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^8.8.0",
     "instant-mocha": "^1.4.1",
     "karma": "^6.3.16",
