Fetch GeoJSON in a worker thread and then switch over

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "lib": ["DOM", "ES2021"],
     "jsx": "react",
     "allowJs": true,
+    "module": "esnext",
     "moduleResolution": "node"
   }
 }
